--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/WolfieBallDraftKit.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.javax.json-1.0.4.jar=C:\\Users\\Sheryar\\Documents\\StonyBrook University\\ESE & CSE CLASSES\\CSE 219\\Homework\\Homework 6\\javax.json-1.0.4.jar
+file.reference.javax.json-1.0.4.jar=E:\\Documents\\StonyBrook University\\ESE & CSE CLASSES\\CSE 219\\Homework\\Final Project\\javax.json-1.0.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -64,8 +64,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.PropertiesManager=../../Homework 6/PropertiesManager
-project.XMLUtilities=../../Homework 6/XMLUtilities
+project.PropertiesManager=../PropertiesManager
+project.XMLUtilities=../XMLUtilities
 reference.PropertiesManager.jar=${project.PropertiesManager}/dist/PropertiesManager.jar
 reference.XMLUtilities.jar=${project.XMLUtilities}/dist/XMLUtilities.jar
 run.classpath=\
